Custom DLL loader for Flatpak

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3727,9 +3727,9 @@ item in the dropdown!</value>
     <value>llvm-objcopy exited with code {0}</value>
   </data>
   <data name="SandboxedLogLocationMboxTitle" xml:space="preserve">
-    <value>Sandboxed Log Location</value>
+    <value>Sandboxed App Cannot Launch Log Viewer</value>
   </data>
   <data name="SandboxedLogLocationMboxMessage" xml:space="preserve">
-    <value>Application is sandboxed so logs cannot be directly opened. Logs are located at {0}</value>
+    <value>Application is sandboxed so logs cannot be directly opened. Logs are located in the Flatpak data directory, which is typically ~/.var/app/club.haroohie.SerialLoops/SerialLoops</value>
   </data>
 </root>
